--- a/app/src/main/res/layout-sw800dp/fragment_book_details.xml
+++ b/app/src/main/res/layout-sw800dp/fragment_book_details.xml
@@ -187,22 +187,36 @@
             app:constraint_referenced_ids="cover_image_0,cover_image_1,publication_layout,personal_data_layout"
             />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/description_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/lbl_genre"
+            style="@style/Label"
             android:layout_marginTop="@dimen/section_margin_top"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:layout_constraintEnd_toStartOf="@id/toc_frame"
+            android:text="@string/lbl_genre"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/barrier_covers_bottom"
-            >
+            />
 
-            <include
-                android:id="@+id/description_content"
-                layout="@layout/fragment_book_details_merge_description_content"
-                />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/genre"
+            style="@style/Field.Generic"
+            app:layout_constraintEnd_toStartOf="@id/toc_frame"
+            app:layout_constraintStart_toStartOf="@id/lbl_genre"
+            app:layout_constraintTop_toBottomOf="@id/lbl_genre"
+            tools:ignore="SelectableText"
+            tools:text="@sample/data.json/genre/name"
+            />
+
+        <TextView
+            android:id="@+id/description"
+            style="@style/Field.Description"
+            android:background="@drawable/bg_outline"
+            app:layout_constraintEnd_toStartOf="@id/toc_frame"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/genre"
+            tools:ignore="SelectableText"
+            tools:maxLines="20"
+            tools:text="@tools:sample/lorem/random"
+            />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/toc_frame"
