--- a/app/src/main/res/layout-sw800dp-land/fragment_book_details.xml
+++ b/app/src/main/res/layout-sw800dp-land/fragment_book_details.xml
@@ -66,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="end"
-            app:constraint_referenced_ids="cover_image_0,cover_image_1"
+            app:constraint_referenced_ids="cover_image_0,cover_image_1,publication_layout"
             />
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
@@ -153,9 +153,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/section_margin_top"
-            app:layout_constraintEnd_toEndOf="@id/col2"
-            app:layout_constraintStart_toEndOf="@id/barrier_covers_end"
-            app:layout_constraintTop_toBottomOf="@id/series_title"
+            app:layout_constraintEnd_toStartOf="@id/barrier_covers_end"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cover_image_1"
             >
 
             <include
@@ -172,7 +172,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/col2"
             app:layout_constraintStart_toEndOf="@id/barrier_covers_end"
-            app:layout_constraintTop_toBottomOf="@id/publication_layout"
+            app:layout_constraintTop_toBottomOf="@id/series_title"
             >
 
             <include
