--- a/app/src/main/res/layout/fragment_booksearch_by_external_id.xml
+++ b/app/src/main/res/layout/fragment_booksearch_by_external_id.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -39,7 +39,7 @@
             />
 
         <!--suppress LongLine -->
-        <com.hardbacknutter.nevertoomanybooks.widgets.ConstraintRadioGroup
+        <com.hardbacknutter.nevertoomanybooks.core.widgets.ConstraintRadioGroup
             android:id="@+id/sites_group"
             android:layout_width="0dp"
             android:layout_height="0dp"
