--- a/app/src/main/res/layout/activity_cropimage.xml
+++ b/app/src/main/res/layout/activity_cropimage.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -35,7 +35,7 @@
         android:layout_height="match_parent"
         />
 
-    <com.hardbacknutter.nevertoomanybooks.widgets.MovableFloatingActionButton
+    <com.hardbacknutter.nevertoomanybooks.core.widgets.MovableFloatingActionButton
         android:id="@+id/fab"
         style="@style/Widget.App.FloatingActionButton"
         android:src="@drawable/ic_baseline_crop_24"
