--- a/app/src/main/res/layout/fragment_booksearch_by_isbn.xml
+++ b/app/src/main/res/layout/fragment_booksearch_by_isbn.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -41,7 +41,7 @@
             app:layout_constraintTop_toTopOf="parent"
             >
 
-            <com.hardbacknutter.nevertoomanybooks.widgets.IsbnTextInputEditText
+            <com.hardbacknutter.nevertoomanybooks.core.widgets.IsbnTextInputEditText
                 android:id="@+id/isbn"
                 style="@style/TIE.Isbn"
                 tools:ignore="Autofill,LabelFor"
